--- a/estilos/estilos/estilosalbertok.css
+++ b/estilos/estilos/estilosalbertok.css
@@ -1,5 +1,5 @@
 @import url(https://fonts,googleapis.com/css?family=yanone+kaffeesatz);
-@import 'https://fonts,googleapis.com/css?family= Open+Sans');
+@import 'https://fonts,googleapis.com/css?family= Open+Sans';
 
 @import url(https://fonts.googleapis.com/css?family=Open+Sans);
 @import url(http://weloveiconfonts.com/api/?family=fontawesome|typicons);
@@ -135,7 +135,7 @@ section {
 
 #blog{
     display: block;
-    left 50%;
+    left: 50%;
     right:50%;
   background: rgba(0,0,0,0.5);
     margin: 10px;
@@ -146,7 +146,7 @@ section {
 
 
 #blog .contenedor{
-    left 50%;
+    left: 50%;
     right:50%;
     width: 75%;
     background:gray;
