--- a/estilos/estilos/estilos beneficios.css
+++ b/estilos/estilos/estilos beneficios.css
@@ -319,7 +319,10 @@ header label {
         height: auto;
         transform: translateX(0%);
         float: right;
+        margin-right: 120px;
         display: flex;
+        justify-content: space-between; /* <-- Agregado */
+        gap: 0.5rem; /* Opcional: separa los enlaces */
     }
     
     .menu a {
@@ -329,6 +332,10 @@ header label {
     header label { 
         display: none;
     }
+}
+
+.fix {
+    margin-bottom: 250px;
 }
 
 video{
