--- a/estilos/estilos/estiloscontac.css
+++ b/estilos/estilos/estiloscontac.css
@@ -6,10 +6,15 @@
 [class*="fontawesome-"]:before {
   font-family: 'FontAwesome', sans-serif;
 }
+
 *{
     box-sizing: border-box;
 }
 
+.whatsap{
+    width: 9rem;
+    height: 7rem;
+}
 body{
     margin: 0;
     font-family: 'Open Sans', sans-serif;
@@ -17,7 +22,7 @@ body{
 header {
     width: 100%;
     height: 70px;
-    background: #333;
+    background: darkturquoise;
     color: #fff;
     position: fixed;
     top: 0;
@@ -26,30 +31,143 @@ header {
 }
 
 
-#banner {
-    right:50px;
-    top: -70px;
+.icon-menu {
+    display:block;
+    width: 40px;
+    height: 36px;
+    font-size: 30px;
+    background: forestgreen;
+    color:  #fff;
+    text-align: center;
+    line-height:  45px;
+    border-radius: 5px;
+    cursor: pointer;
+    margin-right: 2px;
+    margin-top: 14px;
+}
+
+
+.nav{
+    position: absolute;
+    top:2px;
+    right: -100%;
+    width: 250px;
+    margin-top: 10px;
+    transition: all 2s;
+
+    
+}
+
+
+.contnum {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 12px;
+}
+
+.contnum button {
+    width: 12rem;
+    height: 3rem;
+    border-radius: 16px;
+    border: none;
+    background-color: darkturquoise;
+    color: #fff;
+    text-align: center;
+    cursor: pointer;
+    font-size: 1rem;
+}
+
+.contnum a{
+    color: #fff;
+    text-decoration: none;
+}
+
+.contnum_cont {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 6px 6px;
+}
+
+.contnum_cont h2 {
     padding: 0;
     margin: 0;
 }
 
-
-
-.contenedor {
-    width: 98%;
-    margin: auto;
-    border-radius: 1.3%; 
-    flex-wrap: wrap;
+.contnum_cont i {
+    display: inline-block;
+    color: #fff;
+    text-decoration: none;
+    font-size: 30px;
+    padding: 9px;
+    background: #25D366;
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    line-height: 40px;  
+    margin-right: 10px;
+}
+.menu{
+    list-style: none;
+    padding: 0;
+    margin: 0;
+   
+    
 }
 
-#blog .contenedor{
-    width: 90%;
-    left:50%;
-    right:50%;
-    padding: 5px;
-    background:SKYblue;
-    border-radius: 1.3%;   
 
+.menu__link{
+    display: block;
+    padding: 10px;
+    text-decoration: none;
+    text-align: center;
+    color: darkblue;
+    font-size: 25px;
+    background-color: darkturquoise;
+    
+    
+    
+}
+
+.menu__link:hover, .select{
+    background: #fff;
+    color: forestgreen;
+    font-size: 28px;
+    
+}
+
+
+.mostrar {
+    right: 50%;
+   
+    
+}
+
+
+
+
+#logo{
+	margin-top: 135px;
+	width: 250px;
+	height: 250px;
+	display: flex;
+	position: relative;
+	z-index: -0.5;
+	top: 100px;
+	left: 50%;
+	right: 50%;
+	transform: translateX(-50%) translateY(-50%);
+    -webkit-filter: sepia(15%);
+    
+        
+}
+
+.contenedor {
+    width: 100%;
+    margin: auto;
 }
 
  
@@ -61,41 +179,40 @@ header .contenedor {
     display: table;
 }
 
-#presiden {
-    width:90%;
-    text-align: center;
+section {
+    width: 80%;
+    margin: 10px;
+    padding:5px;
     
 }
 
-#presiden img{
-    width: 280px;
-    height: 280px;
-    border-radius: 40%;
-    border: 7px solid #fff;
-    object-fit:cover;
-   
- 
+#blog{
+    display: block;
+    left: 50%;
+    right:50%;
+    background: rgba(0,0,0,0.2);
+    margin: 10px;
+    padding:10px;
+    
 }
-section {
-    text-align: center;
+
+
+
+#blog .contenedor{
+    display: inline-block;
+    left: 50%;
+    right:50%;
     width: 100%;
-    display: flex;
-    flex-wrap: wrap;
-    margin-bottom: 25px;
+    background:rgba(0,0,0,0.2);
+    border-radius: 1.3%;  
+    justify-content: center;
+
+
 }
 
-section img{
-    width: 180px;
-    height: 175px;
-    object-fit: cover;
-}
 
-#bienvenidos {
-    text-align: center;
-}
 
 footer .contenedor {
-    top: 15px;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -113,7 +230,7 @@ footer .contenedor {
 }
 
 .sociales a {
-    color: #333;
+    color: mediumaquamarine;
     text-decoration: none;
 }
 
@@ -125,6 +242,10 @@ footer .contenedor {
     footer .contenedor {
         justify-content: space-between;
     }
+
+    .contnum_cont {
+        flex-direction: row;
+    }
 }
 
 
@@ -132,113 +253,128 @@ footer .contenedor {
     .contenedor {
         width: 1000px;
     }
+
+    .contnum_cont {
+        flex-direction: row;
+    }
 }
 
 
+#blog{
+    width:95%;
+    
+}
 #blog h3, h4 {
     text-align: center;
+
+    
 }
 
-#blog .contenedor{
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-}
 
-#blog article {
-    margin: 15px;
-}
 
 #blog img {
-    width: 100%;
-    max-width: 280px;
-}
-#banner {
-    margin-top: 50px;
-    position: relative;
+    display: flex;
+    width:45%;
 }
 
-#banner img {
-    width: 100%;
-    height: 100%;
+
+
+
+.slider{
+    width:65%;
+    margin:auto;
+    overflow: hidden;
 }
 
-#banner .contenedor {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translateX(-50%) translateY(-50%);
-    color: #fff;
-}
-
-#banner h2 {
-    font-size: 28px;
-}
-
-#banner a {
-    display: block;
-    width: 100px;
-    color: #fff;
-    text-decoration: none;
-    padding: 7px;
-    margin-top: 10px;
-    border: 3px solid #fff;
-}
-
-#banner a:hover {
-    background: rgba(51,51,51,0.5);
-}
-
-@media (min-width:480px) {
-    #banner h2 {
-        font-size: 40px;
-    }
+.slider ul {
+    display: flex;
+    padding: 0;
+    width: 500%;
+    animation:  cambio 20s infinite;
+    animation-direction:alternate;
+                                        }    
+@keyframes cambio {
+    0% {margin-left: 0;}
+    20%{ margin-left: 0;}
     
-    #banner a {
-        margin-top: 25px;
-    }
-}
+    25%{margin-left: -100%;}
+    45%{margin-left: -100%;}
 
-@media (min-width:768px) { 
-    #banner {
-        height: 300px;
-        overflow: hidden;
-    }
+    50%{margin-left: -200%;}
+    70%{margin-left: -200%;}
     
-    #banner img {
-        height: auto;
-        margin-top: -100px;
-    }
+    75%{margin-left: -300%;}
+    87%{margin-left: -300%;}
+
+    90%{margin-left: -400%;}
+   100%{margin-left: -400%;}
+
+
+    
+    
+    
+         
+    
+    
+      
+    
+}
+.slider li{
+    width: 100%;
+    list-style: none;
+} 
+
+.slider img{
+    width: 100%;
+    
+}
+.slider h1 , h2 , h3{
+    background: rgba(0,0,0,0.2);
+    color: #fff;
+      
 }
 
-@media (min-width:1024px) { 
-    #banner img {
-        margin-top: -200px;
-    }
+.primercont {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
 }
-
 #info {
-    background: #333;
+    display: flex;
+    background: rgba(0, 0, 0, 0.3);
     color: #fff;
     text-align: center;
     padding: 20px;
+    width: auto;
+    margin-top: 180px;
+}
+
+#info section {
+    width: 80%;
+    margin: 10px;
+    padding: 5px;
 }
 
 #info .contenedor {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    
+       
 }
 
 .info-pet {
     margin: 20px;
+    padding: 5px;
 }
 
 .info-pet img {
-    width: 180px;
-    height: 280px;
-    border-radius: 23%;
+    width: 90px;
+    height: 90px;
+    border-radius: 10%;
     border: 7px solid #fff;
+    padding: 5px;
+    flex-wrap: wrap
 }
 
 @media (min-width:480px) {
@@ -252,6 +388,7 @@ footer .contenedor {
         width: auto;
     }
 }
+
 #menu-bar {
     display: none;
 }
@@ -265,13 +402,14 @@ header label {
 
 .menu {
     position: absolute;
-    top: 50px;
+    top: 70px;
     left: 0;
     width: 100%;
-    height: 100vh;
-    background: rgba(51,51,51,0.9);
+    height: 100%;
+    background: darkturquoise;
     transition: all 0.5s;
     transform: translateX(-100%);
+    
 }
 
 .menu a {
@@ -280,7 +418,8 @@ header label {
     height: 50px;
     text-decoration: none;
     padding: 15px;
-    border-bottom: 1px solid rgba(255,255,255,0.3);
+    background-color: darkturquoise;
+    
 }
 
 .menu a:hover {
@@ -313,6 +452,7 @@ header label {
     }
 }
 
+
 video{
 	position: fixed;
 	min-width: 100%;
@@ -321,8 +461,7 @@ video{
 	left: 50%;
 	transform: translateX(-50%) translateY(-50%);
 	z-index: -1200;
-    -webkit-filter: 
-        grayscale(60%)
+    -webkit-filter: grayscale(60%);
     
 }
 
@@ -332,9 +471,9 @@ form{
     margin-left: 50px;
    	width:  200px;
     height: 400px;
-    background: rgba(0,0,0,0.5);
+    background: rgba(0,0,0,0.4);
 	padding: 10px 20px;
-	margin-top: 450px;
+	margin-top: 50px;
     border-radius: 20px;
     margin-bottom: 270px;
     
@@ -409,7 +548,7 @@ textarea{
     margin:  0 10px;
 }
 
-.footer .social .icon-youtube{
+.footer .social .icon-whatsapp{
     display: inline-block;
     color: #333;
     text-decoration: none;
@@ -423,9 +562,9 @@ textarea{
     margin:  0 10px;
 }
 
-.footer .social .icon-android{
+.footer .social .icon-instagram{
     display: inline-block;
-    color: #333;
+    color: steelblue;
     text-decoration: none;
     font-size: 30px;
     padding: 9px;
@@ -437,7 +576,7 @@ textarea{
     margin:  0 10px;
 }
 
-.footer .social .icon-twitter{
+.footer .social .icon-googlemaps{
     display: inline-block;
     color: #333;
     text-decoration: none;
@@ -450,54 +589,3 @@ textarea{
     line-height: 40px;
     margin:  0 10px;
 }
-
-
-
-
-@media(min-width: 768px) {
-    .nav{
-        position: static;
-        width: auto;        
-    }
-    
-    .menu{
-        display: flex;
-                
-    }
-    
-    .icon-menu{
-        display: none;
-    }
-    
-    .contenedor1{
-        display: flex;
-    }
-    
-    
-    
-}
-
-
-@media(max-width: 468px) {
-    .logo{
-        position: static;
-        width: 150px;        
-    }
-
-
-
-    
-    
-    
-}
-
-
-
-
-
-
-
-
-
-
-
